--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <p class="textResult">Tip Amount</p>
         <p class="subtext">/ person</p>
 
-        <h2 class="tipAmount">$0.00</h2>
+        <h2 class="tipAmount" id="tipAmount">$0.00</h2>
       </div>
       <div>
         <p class="textResult">Total</p>
         <p class="subtext">/ person</p>
 
-        <h2 class="total">$00.00</h2>
+        <h2 class="total" id="total">$00.00</h2>
       </div>
 
       <button class="reset">RESET</button>
