--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div>
             <button class="tip" id="tip" onclick="selectTip(25, this.id)">25%</button>
             <button class="tip" id="tip" onclick="selectTip(50, this.id)">50%</button>
-            <input type="number" class="tip" id="customtip">
+            <input type="number" class="tip" id="customtip" placeholder="Custom">
           </div>
         </div>
         <label for="people" class="textForm">Number of People</label>
@@ -40,7 +40,7 @@
         
   
     </div>
-    <div class="box3">
+    <div class="box3" >
       <div>
         <p class="textResult">Tip Amount</p>
         <p class="subtext">/ person</p>
@@ -51,10 +51,10 @@
         <p class="textResult">Total</p>
         <p class="subtext">/ person</p>
 
-        <h2 class="total" id="total">$00.00</h2>
+        <h2 class="total" id="total">$0.00</h2>
       </div>
 
-      <button class="reset">RESET</button>
+      <button class="reset" onclick="reset()">RESET</button>
     </div>
   </div>
   <script src="index.js" type="text/javascript"></script>
